--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "author": "Mailson couto",
   "license": "MIT",
   "dependencies": {
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "readline-sync": "^1.4.10"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
